feat: add report feature

--- a/AssetManagementSystem/AssetManagementSystem.csproj
+++ b/AssetManagementSystem/AssetManagementSystem.csproj
@@ -60,6 +60,24 @@
     <Reference Include="MaterialSkin, Version=2.3.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialSkin.2.2.3.1\lib\net461\MaterialSkin.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Design, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -93,6 +111,23 @@
     </Compile>
     <Compile Include="accounts.Designer.cs">
       <DependentUpon>accounts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="cmbBoxForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cmbBoxForm.Designer.cs">
+      <DependentUpon>cmbBoxForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Datasets\LocalSource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LocalSource.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="imageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="imageForm.Designer.cs">
+      <DependentUpon>imageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="reports.cs">
       <SubType>Form</SubType>
@@ -139,14 +174,25 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Items\Asset.cs" />
     <Compile Include="settings.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="settings.Designer.cs">
       <DependentUpon>settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="SqlServerTypes\Loader.cs" />
     <EmbeddedResource Include="accounts.resx">
       <DependentUpon>accounts.cs</DependentUpon>
+    </EmbeddedResource>
+    <Content Include="Reports\AssetList.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <EmbeddedResource Include="cmbBoxForm.resx">
+      <DependentUpon>cmbBoxForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="imageForm.resx">
+      <DependentUpon>imageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="reports.resx">
       <DependentUpon>reports.cs</DependentUpon>
@@ -182,7 +228,34 @@
     <EmbeddedResource Include="settings.resx">
       <DependentUpon>settings.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Datasets\LocalSource.xsc">
+      <DependentUpon>LocalSource.xsd</DependentUpon>
+    </None>
+    <None Include="Datasets\LocalSource.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>LocalSource.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Datasets\LocalSource.xss">
+      <DependentUpon>LocalSource.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\accounts.datasource" />
+    <None Include="Properties\DataSources\AssetManagementSystem.Properties.Resources.datasource" />
+    <None Include="Properties\DataSources\AssetManagementSystem.Properties.Settings.datasource" />
+    <None Include="Properties\DataSources\assets.datasource" />
+    <None Include="Properties\DataSources\cmbBoxForm.datasource" />
+    <None Include="Properties\DataSources\cmbBoxForm.ParameterType.datasource" />
+    <None Include="Properties\DataSources\dashboard.datasource" />
+    <None Include="Properties\DataSources\dbAccess.datasource" />
+    <None Include="Properties\DataSources\Form1.datasource" />
+    <None Include="Properties\DataSources\imageForm.datasource" />
+    <None Include="Properties\DataSources\login.datasource" />
+    <None Include="Properties\DataSources\logs.datasource" />
+    <None Include="Properties\DataSources\Program.datasource" />
+    <None Include="Properties\DataSources\records.datasource" />
+    <None Include="Properties\DataSources\reports.datasource" />
+    <None Include="Properties\DataSources\settings.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -214,6 +287,37 @@
   <ItemGroup>
     <None Include="Resources\plus1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loading.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\nrtGQr.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\9776924.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SqlServerTypes\readme.htm" />
+    <Content Include="SqlServerTypes\x64\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x64\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
