--- a/AssetManagementSystem/packages.config
+++ b/AssetManagementSystem/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="MaterialSkin.2" version="2.3.1" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.118.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.118.0" targetFramework="net472" />
   <package id="System.Data.SQLite.x86" version="1.0.118.0" targetFramework="net472" />
