--- a/AssetManagementSystem/AssetManagementSystem.csproj
+++ b/AssetManagementSystem/AssetManagementSystem.csproj
@@ -135,12 +135,6 @@
     <Compile Include="reports.Designer.cs">
       <DependentUpon>reports.cs</DependentUpon>
     </Compile>
-    <Compile Include="records.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="records.Designer.cs">
-      <DependentUpon>records.cs</DependentUpon>
-    </Compile>
     <Compile Include="logs.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,6 +169,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Items\Asset.cs" />
+    <Compile Include="reportViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reportViewer.Designer.cs">
+      <DependentUpon>reportViewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,9 +196,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="reports.resx">
       <DependentUpon>reports.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="records.resx">
-      <DependentUpon>records.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="logs.resx">
       <DependentUpon>logs.cs</DependentUpon>
@@ -225,6 +222,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="reportViewer.resx">
+      <DependentUpon>reportViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="settings.resx">
       <DependentUpon>settings.cs</DependentUpon>
     </EmbeddedResource>
@@ -300,6 +300,8 @@
     <None Include="Resources\9776924.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\search.png" />
+    <None Include="Resources\search1.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
